--- a/_config.yml
+++ b/_config.yml
@@ -83,9 +83,9 @@ panelbear_analytics:  # panelbear analytics site ID (format: XXXXXXXXX)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: Kinal's Blog  # your blog must have a name for it to show up in the nav bar
-blog_description: 
-permalink: /blog/:year/:title/
+# blog_name: Kinal's Blog  # your blog must have a name for it to show up in the nav bar
+# blog_description: 
+# permalink: /blog/:year/:title/
 
 # Pagination
 pagination:
@@ -203,8 +203,8 @@ jekyll-archives:
 
 scholar:
 
-  last_name: Einstein
-  first_name: [Albert, A.]
+  last_name: Mehta
+  first_name: [Kinal, K.]
 
   style: apa
   locale: en
