--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ keywords: kinalmehta, kinal, kinal-website, portfolio-website  # add your own ke
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: K # the emoji used as the favicon
 url: https://kinalmehta.github.io # the base hostname & protocol for your site
-baseurl: /al-folio # the subpath of your site, e.g. /blog/
+baseurl:  # the subpath of your site, e.g. /blog/
 last_updated: true # set to true if you want to display last updated in the footer
 impressum_path:  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
 
@@ -28,7 +28,7 @@ impressum_path:  # set to path to include impressum link in the footer, use the 
 # will use title and url fields
 # Take a look to https://github.com/jekyll/jekyll-feed for more customization
 
-rss_icon: false
+rss_icon: true
 
 # -----------------------------------------------------------------------------
 # Layout
