--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,6 +1,6 @@
 "Mehta":
   - firstname: ["Kinal", "K.", "Kinal Mehta"]
-    url: https://kinalmehta.github.io/
+    url: https://kinalmehta.github.io
 
 # "Podolsky":
 #   - firstname: ["Boris", "B.", "B. Y.", "Boris Yakovlevich"]
